# kingdom-nurturing-suite

./: .coveragerc  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  README.md  build-dev.sh  build.sh  conftest.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  remove_migrations.py  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  tailwind.config.js
.github/workflows/: pr.yaml
kns/accounts/: apps.py  decorators.py  emails.py  forms.py  models.py  urls.py  utils.py  views.py
kns/accounts/migrations/: 0001_initial.py
kns/accounts/tests/: factories.py  test_forms.py  test_models.py  test_utils.py  test_views.py
kns/actionapprovals/: admin.py  apps.py  constants.py  models.py  views.py
kns/actionapprovals/migrations/: 0001_initial.py
kns/actionapprovals/tests/: test_models.py
kns/activities/: admin.py  apps.py  constants.py  exceptions.py  models.py  views.py
kns/activities/migrations/: 0001_initial.py
kns/activities/tests/: factories.py  test_models.py
kns/apis/: admin.py  apps.py  models.py  urls.py  views.py
kns/classifications/: admin.py  api_urls.py  api_views.py  apps.py  db_data.py  forms.py  models.py  serializers.py  utils.py  views.py
kns/classifications/migrations/: 0001_initial.py  0002_alter_classification_order_and_more.py
kns/classifications/tests/: test_api_views.py  test_forms.py  test_models.py  test_utils.py
kns/core/: admin.py  apps.py  constants.py  context_processors.py  emails.py  modelmixins.py  models.py  urls.py  utils.py  views.py
kns/core/migrations/: 0001_initial.py  0002_alter_faq_options.py  0002_initial.py  0003_makeleaderactionapproval_read_by.py  0003_setting.py  0004_makeleaderactionapproval_approved_at.py  0004_remove_setting_add_group_member_permission_required_and_more.py  0005_alter_makeleaderactionapproval_approved_at.py  0005_rename_initiator_actionapproval_created_by_and_more.py  0006_actionapproval_message.py  0006_delete_makeleaderactionapproval.py  0007_setting_send_forth_disciple_approval_required.py  0008_notification_notificationrecipient_and_more.py  0009_remove_notification_delivery_methods_and_more.py  0010_remove_setting_default_event_registration_limit.py
kns/core/tests/: factories.py  test_modelmixins.py  test_models.py  test_views.py
kns/custom_user/: admin.py  apps.py  models.py
kns/custom_user/migrations/: 0001_initial.py  0002_user_agreed_to_terms_user_is_visitor_user_verified.py
kns/discipleships/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
kns/discipleships/migrations/: 0001_initial.py  0002_discipleship_completed_at.py
kns/discipleships/tests/: test_forms.py  test_models.py  test_views.py
kns/events/: admin.py  apps.py  constants.py  context_processors.py  forms.py  models.py  permissions.py  urls.py  utils.py  views.py
kns/events/migrations/: 0001_initial.py  0002_eventimage_primary.py  0003_remove_event_registration_limit_alter_event_slug_and_more.py
kns/events/tests/: factories.py  test_constants.py  test_context_processors.py  test_forms.py  test_models.py  test_permissions.py  test_utils.py  test_views.py
kns/faith_milestones/: admin.py  apps.py  constants.py  db_data.py  forms.py  models.py  utils.py  views.py
kns/faith_milestones/migrations/: 0001_initial.py
kns/faith_milestones/tests/: test_forms.py  test_models.py  test_utils.py
kns/groups/: admin.py  api_urls.py  api_views.py  apps.py  constants.py  context_processors.py  decorators.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
kns/groups/migrations/: 0001_initial.py  0002_alter_groupmember_profile.py  0003_alter_group_description.py
kns/groups/templatetags/: __init__.py  groups_custom_tags.py
kns/groups/tests/: factories.py  test_api_views.py  test_constants.py  test_decorators.py  (+6 more)
kns/levels/: admin.py  api_urls.py  api_views.py  apps.py  db_data.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
kns/mentorships/: admin.py  apps.py  db_data.py  forms.py  models.py  utils.py  views.py
kns/movements/: admin.py  apps.py  db_data.py  models.py  utils.py  views.py
kns/onboarding/: admin.py  apps.py  constants.py  context_processors.py  middleware.py  models.py  urls.py  utils.py  views.py
kns/profiles/: admin.py  apps.py  constants.py  context_processors.py  db_data.py  decorators.py  emails.py  forms.py  methods.py  models.py  urls.py  utils.py  views.py
kns/skills/: admin.py  apps.py  forms.py  models.py  skills_data.py  urls.py  utils.py  views.py
kns/templates/: 404.html  base.html
kns/vocations/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py  vocations_data.py
project/: asgi.py  settings.py  urls.py  wsgi.py
project/settings/: base.py  local.py  production.py  testing_settings.py
(+304 files in other folders)
