[project]
requires-python = ">=3.12"

[tool.bandit]
exclude_dirs = ["*/test/*", "*/tests/*"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.coverage.report]
fail_under = 100
omit = ["*/migrations/*"]
show_missing = true
skip_covered = true

[tool.isort]
profile = "black"
src_paths = ["kns", "project"]

[tool.flake8]
ignore = []
select = [
  "E",  # pycodestyle errors and warnings
  "W",
  "F",  # Pyflakes issues
  "UP",  # Outdated Python syntax
  "S",  # Security checks
  "B",  # Bugbear checks
  "SIM",  # Simplify checks
  "I",  # isort checks
]
src_paths = ["kns", "project"]

# [tool.pytest.ini_options]
# addopts = "--nomigrations --disable-socket"
# DJANGO_SETTINGS_MODULE = "project.settings.testing_settings"
# filterwarnings = ["error"]
# testpaths = ["kns"]

# [tool.coverage.run]
# omit = [
#   "*apps.py",
#   "*migrations/*",
#   "*settings*",
#   "*tests/*",
#   "*urls.py",
#   "*wsgi/*",
#   "*asgi/*",
#   "manage.py"
# ]
