[project]
requires-python = ">=3.12"

[tool.bandit]
exclude_dirs = ["*/test/*", "*/tests/*"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.coverage.report]
fail_under = 100
omit = ["*/migrations/*"]
show_missing = true
skip_covered = true

[tool.isort]
profile = "black"
src_paths = ["kns", "project"]

[tool.flake8]
ignore = []
select = [
  "E",  # pycodestyle errors and warnings
  "W",
  "F",  # Pyflakes issues
  "UP",  # Outdated Python syntax
  "S",  # Security checks
  "B",  # Bugbear checks
  "SIM",  # Simplify checks
  "I",  # isort checks
]
src_paths = ["kns", "project"]

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks
  "ES01", # but don't require an extended summary
  "EX01", # or examples
  "SA01", # or a see also section
  "SS06", # and don't require the summary to fit on one line
]
exclude = [  # don't report on checks for these
  '__init__$',
  'apps$',                        # Exclude files named 'apps.py'
  'urls$',                        # Exclude files named 'urls.py'
  '.Meta$',                        # Exclude files named 'urls.py'
  '\\.__repr__$',
  '\\.__str__$',
]
override_SS05 = [  # allow docstrings to start with these words
  '^Process ',
  '^Assess ',
  '^Access ',
]
